tests/ui/frontmatter/unclosed-6.stderr
error: unclosed frontmatter
  --> $DIR/unclosed-6.rs:1:1
   |
LL | / ---
LL | |
LL | | 🦀---
LL | |  ---
...  |
LL | |
   | |_^
   |
note: frontmatter opening here was not closed
  --> $DIR/unclosed-6.rs:1:1
   |
LL | ---
   | ^^^

error: aborting due to 1 previous error

